@@ -338,6 +338,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\amuleAppCommon.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\amuled.cpp"
 				>
 			</File>
