@@ -62,7 +62,6 @@
 #include "TransferWnd.h"		// Needed for CTransferWnd
 #include "updownclient.h"
 #include "ServerListCtrl.h"		// Needed for CServerListCtrl
-#include "MagnetURI.h"			// Needed for CMagnetURI
 #include "ScopedPtr.h"
 
 
@@ -194,6 +193,13 @@ void CamuleRemoteGuiApp::OnPollTimer(wxTimerEvent&)
 	default:
 		AddLogLineCS(wxT("WTF?")); // should not happen. :-)
 		request_step = 0;
+	}
+
+	// Check for new links once per second.
+	static uint32 lastED2KLinkCheck = 0;
+	if (GetTickCount() - lastED2KLinkCheck >= 1000) {
+		AddLinksFromFile();
+		lastED2KLinkCheck = GetTickCount();
 	}
 }
 
@@ -465,84 +471,6 @@ wxString CamuleRemoteGuiApp::GetLog(bool)
 wxString CamuleRemoteGuiApp::GetServerLog(bool)
 {
 	return wxEmptyString;
-}
-
-
-wxString CamuleRemoteGuiApp::CreateMagnetLink(const CAbstractFile* f)
-{
-	// TODO: Remove duplicate code (also in amule.cpp) ... 
-	CMagnetURI uri;
-
-	uri.AddField(wxT("dn"), f->GetFileName().Cleanup(false).GetPrintable());
-	uri.AddField(wxT("xt"), wxString(wxT("urn:ed2k:")) + f->GetFileHash().Encode().Lower());
-	uri.AddField(wxT("xt"), wxString(wxT("urn:ed2khash:")) + f->GetFileHash().Encode().Lower());
-	uri.AddField(wxT("xl"), wxString::Format(wxT("%") wxLongLongFmtSpec wxT("u"), f->GetFileSize()));
-
-	return uri.GetLink();
-}
-
-wxString CamuleRemoteGuiApp::CreateED2kLink(const CAbstractFile* f, bool add_source, bool use_hostname, bool addcryptoptions)
-{
-	// TODO: Avoid duplicate code (also in amule.cpp) ... 
-	wxASSERT(!(!add_source && (use_hostname || addcryptoptions)));
-	// Construct URL like this: ed2k://|file|<filename>|<size>|<hash>|/
-	wxString strURL = CFormat(wxT("ed2k://|file|%s|%i|%s|/"))
-		% f->GetFileName().Cleanup(false)
-		% f->GetFileSize() % f->GetFileHash().Encode();
-	
-	if (add_source && IsConnected() && !IsFirewalled()) {
-		// Create the first part of the URL
-		strURL << wxT("|sources,");
-
-		if (use_hostname) {
-			strURL << thePrefs::GetYourHostname();
-		} else {
-			uint32 clientID = GetID();
-			strURL << (uint8) clientID << wxT(".") <<
-			(uint8)(clientID >> 8) << wxT(".") <<
-			(uint8)(clientID >> 16) << wxT(".") <<
-			(uint8)(clientID >> 24);
-		}
-		
- 		strURL << wxT(":") <<
-			thePrefs::GetPort();
-		
-		if (addcryptoptions) {
-			const uint8 uSupportsCryptLayer	= thePrefs::IsClientCryptLayerSupported() ? 1 : 0;
-			const uint8 uRequestsCryptLayer	= thePrefs::IsClientCryptLayerRequested() ? 1 : 0;
-			const uint8 uRequiresCryptLayer	= thePrefs::IsClientCryptLayerRequired() ? 1 : 0;
-			const uint8 byCryptOptions = (uRequiresCryptLayer << 2) | (uRequestsCryptLayer << 1) | (uSupportsCryptLayer << 0) | (uSupportsCryptLayer ? 0x80 : 0x00);
-			
-			strURL << wxT(":") << byCryptOptions;
-			
-			if (byCryptOptions & 0x80) {
-				strURL << wxT(":") << thePrefs::GetUserHash().Encode();
-			}
-			
-		}
-		strURL << wxT("|/");
-	} else if (add_source) {
-		AddLogLineM(true, _("WARNING: You can't add yourself as a source for an eD2k link while having a lowid."));
-	}
-
-	// Result is "ed2k://|file|<filename>|<size>|<hash>|/|sources,[(<ip>|<hostname>):<port>[:cryptoptions[:hash]]]|/"
-	return strURL;
-}
-
-
-wxString CamuleRemoteGuiApp::CreateED2kAICHLink(const CKnownFile* f)
-{
-	// TODO: Avoid duplicate code (also in amule.cpp) ... 
-	// Create the first part of the URL
-	wxString strURL = CreateED2kLink(f);
-	// Append the AICH info
-	if (f->HasProperAICHHashSet()) {
-		strURL.RemoveLast();		// remove trailing '/'
-		strURL << wxT("h=") << f->GetAICHMasterHash() << wxT("|/");
-	}	
-
-	// Result is "ed2k://|file|<filename>|<size>|<hash>|h=<AICH master hash>|/"
-	return strURL;
 }
 
 
@@ -1378,10 +1306,12 @@ CRemoteContainer<CPartFile, CMD4Hash, CEC_PartFile_Tag>(conn, true)
 }
 
 
-bool CDownQueueRem::AddLink(const wxString &link, int)
+bool CDownQueueRem::AddLink(const wxString &link, uint8 cat)
 {
 	CECPacket req(EC_OP_ADD_LINK);
-	req.AddTag(CECTag(EC_TAG_STRING, link));
+	CECTag link_tag(EC_TAG_STRING, link);
+	link_tag.AddTag(CECTag(EC_TAG_PARTFILE_CAT, cat));
+	req.AddTag(link_tag);
 	
 	m_conn->SendPacket(&req);
 	return true;
