@@ -1110,80 +1110,6 @@ bool CamuleApp::ReinitializeNetwork(wxString* msg)
 	return ok;
 }
 
-// Returns a magnet ed2k URI
-wxString CamuleApp::CreateMagnetLink(const CAbstractFile *f)
-{
-	CMagnetURI uri;
-
-	uri.AddField(wxT("dn"), f->GetFileName().Cleanup(false).GetPrintable());
-	uri.AddField(wxT("xt"), wxString(wxT("urn:ed2k:")) + f->GetFileHash().Encode().Lower());
-	uri.AddField(wxT("xt"), wxString(wxT("urn:ed2khash:")) + f->GetFileHash().Encode().Lower());
-	uri.AddField(wxT("xl"), CFormat(wxT("%d")) % f->GetFileSize());
-
-	return uri.GetLink();
-}
-
-// Returns a ed2k file URL
-wxString CamuleApp::CreateED2kLink(const CAbstractFile *f, bool add_source, bool use_hostname, bool addcryptoptions)
-{
-	wxASSERT(!(!add_source && (use_hostname || addcryptoptions)));
-	// Construct URL like this: ed2k://|file|<filename>|<size>|<hash>|/
-	wxString strURL = CFormat(wxT("ed2k://|file|%s|%i|%s|/"))
-		% f->GetFileName().Cleanup(false)
-		% f->GetFileSize() % f->GetFileHash().Encode();
-	
-	if (add_source && IsConnected() && !IsFirewalled()) {
-		// Create the first part of the URL
-		strURL << wxT("|sources,");
-		if (use_hostname) {
-			strURL << thePrefs::GetYourHostname();
-		} else {
-			uint32 clientID = GetID();
-			strURL << (uint8) clientID << wxT(".") <<
-			(uint8)(clientID >> 8) << wxT(".") <<
-			(uint8)(clientID >> 16) << wxT(".") <<
-			(uint8)(clientID >> 24);
-		}
-		
- 		strURL << wxT(":") <<
-			thePrefs::GetPort();
-		
-		if (addcryptoptions) {
-			const uint8 uSupportsCryptLayer	= thePrefs::IsClientCryptLayerSupported() ? 1 : 0;
-			const uint8 uRequestsCryptLayer	= thePrefs::IsClientCryptLayerRequested() ? 1 : 0;
-			const uint8 uRequiresCryptLayer	= thePrefs::IsClientCryptLayerRequired() ? 1 : 0;
-			const uint8 byCryptOptions = (uRequiresCryptLayer << 2) | (uRequestsCryptLayer << 1) | (uSupportsCryptLayer << 0) | (uSupportsCryptLayer ? 0x80 : 0x00);
-			
-			strURL << wxT(":") << byCryptOptions;
-			
-			if (byCryptOptions & 0x80) {
-				strURL << wxT(":") << thePrefs::GetUserHash().Encode();
-			}
-		}
-		strURL << wxT("|/");
-	} else if (add_source) {
-		AddLogLineM(true, _("WARNING: You can't add yourself as a source for an eD2k link while having a lowid."));
-	}
-
-	// Result is "ed2k://|file|<filename>|<size>|<hash>|/|sources,[(<ip>|<hostname>):<port>[:cryptoptions[:hash]]]|/"
-	return strURL;
-}
-
-// Returns a ed2k link with AICH info if available
-wxString CamuleApp::CreateED2kAICHLink(const CKnownFile* f)
-{
-	// Create the first part of the URL
-	wxString strURL = CreateED2kLink(f);
-	// Append the AICH info
-	if (f->HasProperAICHHashSet()) {
-		strURL.RemoveLast();		// remove trailing '/'
-		strURL << wxT("h=") << f->GetAICHMasterHash() << wxT("|/");
-	}	
-
-	// Result is "ed2k://|file|<filename>|<size>|<hash>|h=<AICH master hash>|/"
-	return strURL;
-}
-
 /* Original implementation by Bouc7 of the eMule Project.
    aMule Signature idea was designed by BigBob and implemented
    by Un-Thesis, with design inputs and suggestions from bothie.
